# cyntra

./: .gitignore  .gitmodules  .mcp.json  .mise.toml  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  FAB_WORLD_COMPLETE.md  FAB_WORLD_IMPLEMENTATION_SUMMARY.md  FAB_WORLD_QUICKSTART.md  README.md  RESTART_INSTRUCTIONS.md  TELEMETRY_IMPLEMENTATION.md  TELEMETRY_READY.md  composed-pondering-wilkes.md  eslint.config.mjs  linear-mixing-hammock.md  package.json  pyproject.toml
apps/glia-fab-desktop/src-tauri/: Cargo.toml
crates/: .envrc  Cargo.toml
crates/ai/: Cargo.toml
crates/ai-bevy/: Cargo.toml
crates/ai-bevy/examples/: ai_decision_demo.rs  ai_integration_demo.rs  bevy_debug_demo.rs  crowd_demo.rs  game_ai_demo.rs  nav_physics_demo.rs  perception_demo.rs  physics_demo.rs
crates/ai-bevy/src/: bt.rs  crowd.rs  dialogue.rs  goap.rs  htn.rs  lib.rs  steering.rs  trace_egui.rs  utility.rs
crates/ai-bevy/tests/: basic.rs  perception.rs  time.rs  trace.rs  trace_inspector.rs  transform_sync.rs
crates/ai-bt/: Cargo.toml
crates/ai-bt/benches/: tick.rs
crates/ai-bt/src/: bt.rs  lib.rs  nodes.rs  policy.rs
crates/ai-bt/tests/: move_to.rs  plan_node.rs  plan_node_no_progress.rs  preemption.rs
crates/ai-core/: Cargo.toml
crates/ai-core/src/: action.rs  agent.rs  blackboard.rs  brain.rs  lib.rs  plan.rs  policy.rs  rng.rs  tick.rs  world.rs
crates/ai-core/tests/: action_replace.rs  blackboard.rs  plan_action.rs  plan_executor_action.rs
crates/ai-crowd/: Cargo.toml
crates/ai-crowd/benches/: crowd.rs
crates/ai-crowd/src/: lib.rs
crates/ai-crowd/tests/: basic.rs
crates/ai-debug/src/: bevy_ai_egui.rs
crates/ai-goap/: Cargo.toml
crates/ai-goap/benches/: planner.rs
crates/ai-goap/src/: bt.rs  lib.rs  planner.rs  policy.rs
crates/ai-goap/tests/: bt_node.rs  no_progress.rs  policy_failure_cache_bust.rs  replanning.rs
crates/ai-htn/: Cargo.toml
crates/ai-htn/benches/: planner.rs
crates/ai-htn/examples/: htn_policy_trace.rs
crates/ai-htn/src/: lib.rs  policy.rs
crates/ai-htn/tests/: basic.rs  bt_integration.rs  policy.rs  policy_replanning.rs
crates/ai-nav/: Cargo.toml
crates/ai-nav/benches/: nav_mesh.rs
crates/ai-nav/src/: actions.rs  grid.rs  lib.rs  math.rs  mesh.rs  navigator.rs  world.rs
crates/ai-nav/tests/: nav_grid.rs  nav_mesh.rs  serde_roundtrip.rs
crates/ai-tools/: Cargo.toml
crates/ai-tools/src/: lib.rs  trace.rs
crates/ai-tools/tests/: serde_roundtrip.rs  trace.rs
crates/ai-utility/: Cargo.toml
crates/ai-utility/src/: bt.rs  lib.rs  policy.rs
crates/ai-utility/tests/: basic.rs  bt_node.rs
crates/ai/src/: lib.rs
crates/benches/: BENCHMARKS.md  README.md
crates/cyntra-cli/: Cargo.toml
crates/cyntra-cli/src/: main.rs
crates/cyntra-core/: Cargo.toml
crates/cyntra-core/src/: config.rs  lib.rs
crates/cyntra-fab/: Cargo.toml
crates/cyntra-fab/src/: gate.rs  lib.rs
crates/logos-ffi/: Cargo.toml
crates/logos-ffi/src/: formula.rs  operators.rs  routing.rs
crates/logos-goap/: Cargo.toml
crates/logos-goap/src/: lib.rs  proof_receipt.rs  training.rs  verified_planner.rs
crates/logos-py/: Cargo.toml
crates/logos-py/src/: lib.rs
crates/logos-z3/: Cargo.toml
crates/logos-z3/src/: checker.rs  lib.rs  translation.rs
kernel/: README.md  pyproject.toml
kernel/benchmarks/: __init__.py
kernel/benchmarks/code_smoke_v1/: __init__.py  tasks.py
kernel/docs/: memory-integration.md  memory-system.md
kernel/docs/architecture/: data-model.md  fab-overview.md  fab-priors-scaffolds.md  fab-render-harness.md  fab-schemas.md  overview.md  quality-gates.md  scheduling.md  toolchain-adapters.md  workcell-contract.md
kernel/docs/guides/: configuration.md  getting-started.md
kernel/examples/: config-minimal.yaml  config.yaml  manifest.json  proof.json  sleeptime-config.yaml
kernel/migrations/: 002_scoring_function.sql
kernel/schemas/: event.schema.json  manifest.schema.json  proof.schema.json
kernel/schemas/cyntra/: agents.schema.json  dynamics_report.schema.json  evolve_run.schema.json  evolve_world.schema.json  executed_plan.schema.json  frontier.schema.json  genome.schema.json  objectives.schema.json  planner_action.schema.json  planner_input.schema.json  rollout.schema.json  run_context.schema.json  state_t1.schema.json  strategy_profile.schema.json  swarms.schema.json  transition.schema.json  universe.schema.json  universe_world_frontiers.schema.json  world_genome_surface.schema.json
kernel/schemas/fab/: asset-proof.schema.json  critic-report.schema.json  gate-verdict.schema.json  run-manifest.schema.json
kernel/scripts/: create_demo_telemetry.py  test_nitrogen_integration.sh
kernel/src/cyntra/: __init__.py  cli.py
kernel/tests/: test_telemetry.py
kernel/tests/fab/: test_comfyui_client.py  test_comfyui_stage.py  test_game_contract.py  test_gameplay_config.py  test_godot_gate.py  test_integration.py  test_nitrogen_client.py  test_nitrogen_runpod.py  test_performance_gate.py  test_playability_gate.py  test_playability_metrics.py  test_render_config.py  test_vault.py  test_world_config.py
kernel/tests/integration/: __init__.py  conftest.py  test_cocoindex_integration.py  test_cocoindex_neo4j_export.py  test_comfyui_integration.py  test_hook_integration.py  test_kernel_e2e.py  test_nitrogen_e2e.py  test_nitrogen_local.py  test_telemetry_integration.py
kernel/tests/memory/: __init__.py  test_collective.py  test_database.py  test_extraction.py  test_hooks.py  test_integration.py  test_linking.py  test_models.py  test_observations.py  test_scoring.py  test_store.py  test_surfacing.py  (+2 more)
research/backbay-imperium/: .gitignore  ARCHITECTURE.md  CORE_FEATURES_AND_PROGRESSION.md  Cargo.toml  DESIGN_LAWS.md  EXECUTION_PLAN.md  FAB_ASSET_STRATEGY.md  GAMEPLAY_SPEC.md  IMPLEMENTATION_SPEC.md  MULTIPLAYER_PLAN.md  MULTIPLAYER_RESEARCH.md  MULTIPLAYER_TECHNICAL.md  OPENSOURCE_RESOURCES.md  README.md  STORYTELLING_DESIGN.md  SULLA_ANALYSIS.md  TECHNICAL_SPEC_AND_IMPLEMENTATION_PLAN.md  VERTICAL_SLICE.md
research/monet-nitrogen/: .env.example  README.md  pyproject.toml  requirements.txt
(+2658 files in other folders)
