[workspace]
resolver = "2"
members = [
    # AI primitives
    "ai",
    "ai-bt",
    "ai-bevy",
    "ai-crowd",
    "ai-core",
    "ai-goap",
    "ai-htn",
    "ai-nav",
    "ai-tools",
    "ai-utility",
    # Cyntra kernel
    "cyntra-core",
    "cyntra-cli",
    # Logos formal reasoning
    "logos-ffi",
    "logos-z3",
    "logos-goap",
    "logos-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/your-org/glia-fab"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Benchmarks
criterion = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Git operations
git2 = "0.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Process management
portable-pty = "0.8"

# Path handling
directories = "5"
