[package]
name = "ai-bevy"
description = "Bevy adapter for the deterministic ai-* crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
time = ["dep:bevy_time"]
trace = ["dep:ai-tools"]
trace-inspector = ["trace"]
trace-egui = ["trace-inspector", "dep:bevy_egui"]
transform-sync = ["dep:bevy_transform"]
perception = ["dep:ai-perception"]
crowd = ["dep:ai-crowd"]
crowd-orca = ["crowd", "ai-crowd/orca"]
dialogue = ["dep:ai-dialogue"]
bevy-demo = []

[dependencies]
ai-core = { path = "../ai-core" }
ai-nav = { path = "../ai-nav" }
ai-tools = { path = "../ai-tools", optional = true, default-features = false }

bevy_app = "0.16.1"
bevy_ecs = "0.16.1"
bevy_time = { version = "0.16.1", optional = true }
bevy_egui = { version = "0.36.0", optional = true }
bevy_transform = { version = "0.16.1", optional = true }

ai-perception = { path = "../ai-perception", optional = true }
ai-crowd = { path = "../ai-crowd", optional = true }
ai-dialogue = { path = "../ai-dialogue", optional = true }

[dev-dependencies]
ai-debug = { path = "../ai-debug", features = ["bevy-ai-egui"] }
ai-perception = { path = "../ai-perception", features = ["serde", "trace"] }
bevy = "0.16.1"
serde_json = "1"

[[example]]
name = "bevy_debug_demo"
path = "examples/bevy_debug_demo.rs"
required-features = ["trace-egui", "bevy-demo"]

[[example]]
name = "crowd_demo"
path = "examples/crowd_demo.rs"
required-features = ["crowd", "bevy-demo"]

[[example]]
name = "perception_demo"
path = "examples/perception_demo.rs"
required-features = ["perception", "bevy-demo"]
