[package]
name = "ai-goap"
description = "Deterministic GOAP planner producing ai-core PlanSpec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
bt = ["dep:ai-bt"]

[dependencies]
ai-core = { path = "../ai-core" }
ai-bt = { path = "../ai-bt", optional = true }
ai-tools = { path = "../ai-tools" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "planner"
harness = false
