[package]
name = "ai-tools"
description = "Tooling primitives for deterministic game AI (tracing/debug)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ai-core = { path = "../ai-core" }
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = { workspace = true }
