[package]
name = "cyntra"
description = "Cyntra autonomous development kernel CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cyntra"
path = "src/main.rs"

[dependencies]
cyntra-core = { path = "../cyntra-core" }

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true

# For desktop mode (optional, feature-gated later)
# tauri integration would go here
