[package]
name = "cyntra"
description = "Cyntra autonomous development kernel CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cyntra"
path = "src/main.rs"

[features]
default = []
fab = ["dep:cyntra-fab"]
metal = ["fab", "cyntra-fab/metal"]
cuda = ["fab", "cyntra-fab/cuda"]

[dependencies]
cyntra-core = { path = "../cyntra-core" }
cyntra-fab = { path = "../cyntra-fab", optional = true }

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true

# HTTP client for membrane integration
reqwest = { version = "0.12", features = ["json"] }

# For desktop mode (optional, feature-gated later)
# tauri integration would go here
