[package]
name = "cyntra-fab"
description = "Rust-native ML critics for 3D asset quality validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "fab-critic"
path = "src/bin/fab-critic.rs"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
# ML framework
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = "0.3"

# Image processing
image = "0.25"

# 3D mesh parsing
gltf = "1.4"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# CLI
clap.workspace = true

# Error handling
anyhow.workspace = true
thiserror = "2.0"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
