[workspace]
resolver = "2"
members = [
  "crates/backbay-core",
  "crates/backbay-godot",
  "crates/backbay-protocol",
  "crates/backbay-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rmp-serde = "1"
thiserror = "1"
