[package]
name = "glia_fab_desktop"
version = "0.1.0"
description = "Glia Fab Desktop (Mission Control)"
edition = "2021"
rust-version = "1.71"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0.95"
mime_guess = "2.0.5"
portable-pty = "0.8.1"
keyring = "2.3.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tauri = { version = "1.8", features = [] }
time = { version = "0.3.37", features = ["formatting"] }
tiny_http = "0.12.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
