[package]
name = "backbay-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
backbay-protocol = { path = "../backbay-protocol" }
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[[bin]]
name = "backbay-selfplay"
path = "src/bin/selfplay.rs"

