[package]
name = "backbay-godot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
backbay-core = { path = "../backbay-core" }
backbay-protocol = { path = "../backbay-protocol" }
godot = { version = "0.4.5", features = ["api-4-2"] }

backbay-server = { path = "../backbay-server", optional = true }

# Networking (optional, behind the `network` feature)
renet = { version = "1.2", optional = true }
renet_netcode = { version = "1.2", optional = true }
rmp-serde = { version = "1.3", optional = true }
thiserror = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
network = [
  "dep:backbay-server",
  "dep:renet",
  "dep:renet_netcode",
  "dep:rmp-serde",
  "dep:thiserror",
  "dep:serde_json",
]
